I change my index.html file using GitHub controller

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>This is test branch</h2>
     <p>
     <h2>This is test branch</h2>
+    <p>
+    <h2>This is test branch</h2>
 </body>
 </html>
